tests/baselines/reference/noImplicitAnyInCastExpression.errors.txt
tests/cases/compiler/noImplicitAnyInCastExpression.ts(15,2): error TS2735: Type '{ c: null; }' is missing the following properties from type 'IFoo': a, b


==== tests/cases/compiler/noImplicitAnyInCastExpression.ts (1 errors) ====
    // verify no noImplictAny errors reported with cast expression
    
    interface IFoo {
        a: number;
        b: string;
    }
    
    // Expr type not assignable to target type
    (<IFoo>{ a: null });
    
    // Expr type assignable to target type
    (<IFoo>{ a: 2, b: undefined });
    
    // Neither types is assignable to each other
    (<IFoo>{ c: null });
     ~~~~~~~~~~~~~~~~~
!!! error TS2735: Type '{ c: null; }' is missing the following properties from type 'IFoo': a, b